
                    **************************
                    ** MPTinR VERSION 1.3.x **
                    **************************
                    Changes in MPTinR Version 1.3.x
                    Released XXX 2014

    Significant User Visible Changes and new Features
    
    o   added args.fia argument to fit.mpt and fit.model to pass
        arguments to get.mpt.fia (such as mConst, see below).
        
    o   added function lbmpt.to.mpt to transform a model in
        LBMPT into model equations (thanks to Quentin Gronau 
        and Franz Dietrich).
        
    o   added restrictions argument to make.mpt.cf.
    
    
    Bugfixes
    
    o   added mConst argument to bmpt.fia (+ get.mpt.fia) to avoid
        numerical underflows with huge models when calculating FIA.
        see: http://stackoverflow.com/q/20529407/28957
        (this argument should be used carefully).
        
    o   check.model argument in fit.model was also responsible 
        for certain sanity checks in the objective et al.
        This frequently led to errors which are now silently
        dropped.
        
        
                    **************************
                    ** MPTinR VERSION 1.2.x **
                    **************************
                    Changes in MPTinR Version 1.2.x
                    Released November 2013

    Significant User Visible Changes and new Features
    
    o   Most warnings (e.g., concerning unsuccessful optimization
        with analytic gradient) are now messages.
    
    o   Added error message when the objective function did not 
        evaluate successfully with the given starting values.
        
    o   restrictions to constants can now be set to any value 
        (not anymore restricted to be within 0 and 1).
        
    o   fit.model and gen.predictions (et al.) have argument 
        check.model which allows to suppress the check if the 
        expected values of a model sum to 1.
    