@@ -1,10 +1,14 @@
 Package: MPTinR
 Type: Package
 Title: Analyze Multinomial Processing Tree Models
-Version: 1.3.3
-Date: 2014-01-19
-Author: Henrik Singmann, David Kellen, Quentin Gronau, and Christian Mueller
-Maintainer: Henrik Singmann <henrik.singmann@psychologie.uni-freiburg.de>
+Version: 1.3.5
+Date: 2014-04-09
+Authors@R: c(person("Henrik", "Singmann", role = c("aut", "cre"),
+    email = "henrik.singmann@psychologie.uni-freiburg.de"),
+    person("David", "Kellen", role =  "aut"),
+    person("Quentin", "Gronau", role =  "aut"),
+    person("Christian", "Mueller", role =  "ctb"),
+    person("Akhil S", "Bhel", role =  "ctb"))
 Description: MPTinR provides a user-friendly way for the analysis of multinomial processing tree (MPT) models (e.g.,  Riefer, D. M., and Batchelder, W. H. [1988]. Multinomial modeling and the measurement of cognitive processes. Psychological Review, 95, 318-339) for single and multiple datasets. The main functions perform model fitting and model selection. Model selection can be done using AIC, BIC, or the Fisher Information Approximation (FIA) a measure based on the Minimum Description Length (MDL) framework. The model and restrictions can be specified in external files or within an R script in an intuitive syntax or using the contextree language for MPTs. The 'classical' .EQN file format for model files is also supported. Besides MPTs, MPTinR can fit a wide variety of other cognitive models such as SDT models (see fit.model). MPTinR supports multicore fitting and FIA calculation using the snowfall package. MPTinR can generate data from a model for e.g., simulation or parametric bootstrap and plot predicted versus observed data.
 URL: http://www.psychologie.uni-freiburg.de/Members/singmann/R/mptinr
 License: GPL (>= 2)
